# clo_ragni

./: CMakeLists.txt  LICENSE  README.rst
.github/workflows/: compile_windows.yml
include/: Clothoids.hh
include/Clothoids/: AABBtree.hxx  BaseCurve.hxx  BaseCurve_using.hxx  Biarc.hxx  BiarcList.hxx  Circle.hxx  Clothoid.hxx  ClothoidList.hxx  ClothoidSpline-Interpolation.hxx  Constants.hxx  Fresnel.hxx  G2lib.hxx  Line.hxx  PolyLine.hxx  ThreadLocalData.hxx  Triangle2D.hxx  Types.hxx
src/: AABBtree.cc  Biarc.cc  BiarcList.cc  Circle.cc  Clothoid.cc  ClothoidDistance.cc  ClothoidG2.cc  ClothoidList.cc  ClothoidSpline-Interpolation.cc  ClothoidSpline-IpoptSolver.cc  ClothoidSpline-LMSolver.cc  Constants.cc  Format.hxx  Fresnel.cc  G2lib.cc  G2lib_intersect.cc  Line.cc  PolyLine.cc  Triangle2D.cc  Utils.hxx
src_py/: CMakeLists.txt  README.md
src_py/distrib/G2lib/: MANIFEST.in  setup.py
src_py/include/: python-BaseCurve.hh  python-G2libHeaders.hh  python-Interpolation.hh
src_py/src/: python-AABBtree.cc  python-BaseCurve.cc  python-Biarc.cc  python-CircleArc.cc  python-Clothoid.cc  python-G2lib-Interpolation.cc  python-G2lib.cc  python-Interpolation.cc  python-LineSegment.cc
src_py/test/: disabled_test_eval.py  test_interpolation.py  test_issues.py  test_pickle.py
